Rename project references to `<template_name>` and update metadata accordingly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cogistics",
+  "name": "template-raw-html-with-tailwindcss",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
